--- a/public/stylesheets/koop.css
+++ b/public/stylesheets/koop.css
@@ -42,6 +42,12 @@ h1 {
   font-weight: 400;
 }
 
+.ko-op h5 {
+  color: #000;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .ko-op h3 {
   color: #000;
   font-size: 24px;
@@ -85,6 +91,21 @@ h1 {
   width: 190px;
   margin-right: 5px;
   margin-top: 10px;
+}
+
+.footer a {
+  color: #000;
+  text-decoration: underline;
+}
+
+.footer a.presskit {
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+.footer .copy {
+  margin-top: 0px;
+  font-size:12px;
 }
 
 .red-rover {
@@ -184,6 +205,7 @@ a .none {
   padding: 6px 18px;
   text-decoration: none;
   text-shadow: 1px 1px 0px #000000;
+
 }
 
 .subscribe:hover {
@@ -203,4 +225,15 @@ a .none {
   -moz-box-shadow: inset 0px 0px 10px 1px #AAAAAA;
   -webkit-box-shadow: inset 0px 0px 10px 1px #AAAAAA;
   box-shadow: inset 0px 0px 10px 1px #AAAAAA;
+}
+
+.subscribe-section {
+  font-family: 'Cabin', sans-serif;
+  background-color: #000;
+}
+
+.subscribe-section h2 {
+  font-size:22px; 
+  font-weight: 400;
+  letter-spacing: 1.5px;
 }
