--- a/public/stylesheets/koop.css
+++ b/public/stylesheets/koop.css
@@ -1,16 +1,26 @@
 body {
-  background-color: #000;
-  color: #FFF;
-  font-family: 'Arimo', Helvetica, sans-serif;
+  background-color: #ffffff;
+  color: #000000;
+  font-family: 'Lato', Helvetica, sans-serif;
   font-size: 16px;
+  font-color
 }
 
 h1 {
-  font-weight: 700;
+  font-weight: normal;
+}
+
+/*h2 {
+  -webkit-text-stroke: .25px #FFFFFF;
+  -webkit-text-fill-color: #000000;
+}*/
+
+#big {
+  font-size: 72px;
 }
 
 .ko-op p {
-  color: #fff;
+  color: #000000;
 }
 
 .ko-op .right-col {
@@ -18,14 +28,14 @@ h1 {
 }
 
 .ko-op a {
-  color: #fff;
+  color: #000000;
   font-family: 'Cabin', sans-serif;
   letter-spacing: 1px;
   font-size: 20px;
 }
 
 .ko-op p {
-  color: #fff;
+  color: #000000;
 }
 
 .ko-op .grey {
@@ -70,7 +80,7 @@ h1 {
 }
 
 .footer {
-  background-color: #fff;
+  background-color: #FFF;
 }
 
 .footer p {
@@ -110,6 +120,10 @@ h1 {
 .footer .copy {
   margin-top: 0px;
   font-size:12px;
+}
+
+.footz {
+  background: #e8e8e8;
 }
 
 .red-rover {
@@ -171,6 +185,10 @@ a .none {
   color: #444;
 }
 
+.small {
+  font-size: 5px;
+}
+
 .copyright a {
   color: #666;
   text-decoration: underline;
@@ -227,19 +245,23 @@ a .none {
 */
 
 .subscribe {
-  background-color:#000000;
-  -moz-border-radius:6px;
-  -webkit-border-radius:6px;
-  border-radius:6px;
-  border:1px solid #ffffff;
+  -moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
+  box-shadow:inset 0px 0px 0px 0px #ffffff;
+  background-color:#c7c7c7;
+  -moz-border-radius:3px;
+  -webkit-border-radius:3px;
+  border-radius:3px;
+  border:1px solid #dcdcdc;
   display:inline-block;
-  color:#ffffff;
+  color:#495161;
   font-family:arial;
-  font-size:14px;
-  padding:6px 24px;
+  font-size:16px;
+  font-weight:bold;
+  padding:8px 25px;
   text-decoration:none;
 }.subscribe:hover {
-  background-color:#000000;
+  background-color:#a3a3a3;
 }.subscribe:active {
   position:relative;
   top:1px;
