--- a/public/sass/_gardenarium.scss
+++ b/public/sass/_gardenarium.scss
@@ -1,10 +1,11 @@
 .gardenarium {
-	font-family: "edding-780";
+	font-family: "adelle-sans";
 	color: #F500FF;
 	background-color: #f2fdbe;
-	font-size: 1.2em;
+	font-size: 1em;
 	.h1 {
 		font-size: 2em;
+		font-weight: 800;
 	}
 
 	a {
