gardenarium site update

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -399,8 +399,8 @@ body {
     text-decoration: underline; }
 
 .garden-head {
-  background-image: url("/images/gardenarium/patterngif.gif");
-  background-size: 400px; }
+  background-image: url("/images/gardenarium/spiral18.png");
+  background-size: 200px; }
 
 .garden-info {
   background-color: #AE00B0;
