--- a/public/sass/_gardenarium.scss
+++ b/public/sass/_gardenarium.scss
@@ -15,8 +15,8 @@
 }
 
 .garden-head {
-	background-image: url('/images/gardenarium/patterngif.gif');
-	background-size: 400px;
+	background-image: url('/images/gardenarium/spiral18.png');
+	background-size: 200px;
 
 }
 
