orchids website finished

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -861,16 +861,24 @@ input[type="text"], textarea {
 
 .orchids-container {
   font-weight: 500;
-  background-image: url("/images/orchids/orchids-bg4.png");
+  background-image: url("/images/orchids/orchids-bg10.png");
+  background-position: center;
   background-size: cover;
-  color: #fff;
+  color: #396f6a;
   font-size: .8em; }
   .orchids-container a {
-    font-weight: 800;
-    color: #fff; }
+    font-weight: 900;
+    color: #396f6a;
+    text-decoration: none; }
   .orchids-container .h1 {
     font-family: "Clavo", serif;
-    color: #FFFFFF; }
+    color: #df7e08; }
+  .orchids-container .more {
+    color: #FFF; }
+    .orchids-container .more a {
+      color: #FFF; }
+    .orchids-container .more #contact {
+      padding-right: 10px; }
 
 /* Float */
 .hvr-float {
