--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -12,5 +12,6 @@
 @import 'gardenarium';
 @import 'pokodome';
 @import 'orchids';
+@import 'lifebehindplay';
 @import 'hover';
 @import 'sticky-footer';
